--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,13 @@
     height: auto;
 }
 
+.contact-map iframe {
+    width: 152%;
+    box-shadow: 0px 5px 25px rgba(218, 211, 211, 0.3);
+    height: 550px; }
+    @media (max-width: 767px) {
+      .contact-map iframe {
+        height: 350px; } }
 
 /* ===== Team CSS ===== */
 .ud-team {
