--- a/styles.css
+++ b/styles.css
@@ -7261,11 +7261,18 @@ header {
 
 @media (max-width: 992px) {
     #stats-table-ref div div {
-        margin-bottom: 10px;
+        margin-bottom: 50px;
         text-align: center;
     }
 
-    #stats-table-ref div {}
+    #stats-table-ref div div div{
+        margin-bottom: 5px;
+    }
+
+    #stats-table-ref div {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
 }
 
 #google-map {
@@ -7417,11 +7424,14 @@ div.title-icon p {
     }
 
     #contact-div {
-        padding-right: 100%;
-        margin: 0%;
+        justify-content: center;
+        margin: auto;
+        padding-right: 50%;
+        padding-left: 0px;
+        margin-left: 25%;
     }
 
-    #contact-list{
+    #contact-list {
         text-align: center;
         justify-content: center;
     }
@@ -7444,7 +7454,34 @@ div.title-icon p {
         width: 100%;
         text-align: center;
         float: left;
+        overflow-wrap: break-word;
     }
+}
+
+@media (max-width: 385px) {
+    #footer-contacts span {
+        padding-right: 0px;
+        border-right-width: 0px;
+        margin-right: 0px;
+    }
+
+    .removed-br {
+        display: unset !important;
+    }
+}
+
+@media (max-width: 405px) {
+    .removed-br-2 {
+        display: unset !important;
+    }
+}
+
+.removed-br {
+    display: none;
+}
+
+.removed-br-2 {
+    display: none;
 }
 
 .head_title {
@@ -7454,12 +7491,6 @@ div.title-icon p {
 .map_google {
     border: none;
     height: 350px;
-}
-
-#statistic-listing {
-    line-height: 27px;
-    font-weight: 500;
-    color: #000;
 }
 
 @media (max-width: 992px) {
