--- a/styles.css
+++ b/styles.css
@@ -7511,6 +7511,7 @@ div.title-icon p {
     }
 
     #form-button {
+        width: 100%;
         margin: auto;
         display: block;
         margin-top: 0px;
