--- a/styles.css
+++ b/styles.css
@@ -7256,7 +7256,7 @@ header {
 }
 
 .section-bg-image.parallax-window.text-center.section-middle-img {
-    background-image: url(images/team/team-banner5.jpeg);
+    background-image: url(images/team/team-banner.jpeg);
 }
 
 @media (max-width: 992px) {
